--- a/softphone.html
+++ b/softphone.html
@@ -31,7 +31,7 @@ Read more details in the webphone documentation: "Web Dialer/Softphone" chapter.
 
     <script>window.pageissdk = false;</script>
     <script src="webphone_api.js?jscodeversion=821"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 </head>
 <body spellcheck="false">
