update call page v2

--- a/softphone.html
+++ b/softphone.html
@@ -470,37 +470,16 @@ Read more details in the webphone documentation: "Web Dialer/Softphone" chapter.
                     </ul>
                 </div>
             </div>
-            <div class="separator_line_thick"><!--//--></div>
+            <div class="separator_line_thick"></div>
         </div>
         <div class="status_container">
             <img src="images/icon_encrypt.png" class="img_encrypt" title="Encrypted"><div id="calledcaller">&nbsp;</div>
             <div id="call_duration">&nbsp;</div>
             <div id="status_call">&nbsp;</div>
         </div>
-        <div class="clear_float"><!--//--></div>
+        <div class="clear_float"></div>
     </div>
     <div id="page_call_content" role="main" class="ui-content">
-        <div id="mlcontainer" style="display: none;">
-            <div class="separator_line_thick"><!--//--></div>
-            <div id="ml_buttons"><!--
-                <button class="ui-btn line_btn noshadow" data-theme="b" id="btn_line_1">
-                    <span class="line_text">Line 1</span>
-                    <span class="line_status line_status_on" id="line_1_status" >&nbsp;</span>
-                </button><button class="ui-btn line_btn noshadow" data-theme="b" id="btn_line_2">
-                    <span class="line_text">Line 2</span>
-                    <span class="line_status" id="line_2_status" >&nbsp;</span>
-                </button>-->
-            </div>
-        </div>
-        
-        <div id="audiodevice_container"  style="display: none;"><button id="btn_audiodevice" class="ui-btn noshadow ui-btn-inline ui-corner-all">Audio devices</button></div>
-        <div id="volumecontrols" style="display: none;">
-            <div class="volume_labels">Volume in:</div>
-            <div class="volume_sliders"><input name="volumein" id="volumein" data-mini="true" min="0" max="100" value="50" type="range"></div>
-            <div style="float: left; width: 90%; clear: both;"><!--//--></div>
-            <div class="volume_labels">Volume out:</div>
-            <div class="volume_sliders"><input name="volumeout" id="volumeout" data-mini="true" min="0" max="100" value="50" type="range"></div>
-        </div>
         <div id="contact_image">
             <div id="contact_details">
                 <img src="images/default_contact_img.png" id="contact_image_img" alt="contact image"
